# BuDDySharp

./: .gitignore  .gitmodules  BDDException.cs  CMakeLists.txt  LICENSE  README.md  bdd.i  bdd_ext.cs  buddysharp.i
BuDDySharp/: .gitignore  BuDDySharp.sln
BuDDySharp/BuDDySharp/: BuDDySharp.cs  BuDDySharp.csproj  BuDDySharpExt.cs  Enums.cs  Structs.cs  bdd.cs
BuDDySharp/BuDDySharp/Properties/: AssemblyInfo.cs
BuDDySharp/TestBuDDySharp/: Program.cs  TestBuDDySharp.csproj
BuDDySharp/TestBuDDySharp/Properties/: AssemblyInfo.cs
test/testBuDDySharp/: Program.cs  testBuDDySharp.csproj  testBuDDySharp.sln  testBuDDySharp.userprefs
test/testBuDDySharp/Properties/: AssemblyInfo.cs
wrapper/: CMakeLists.txt  wrapper.c
